--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.0",
     "framer-motion": "^10.16.3",
     "i": "^0.3.7",
+    "lottie-react": "^2.4.0",
     "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
