--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "sweetalert2": "^11.7.27",
     "tailwind-scrollbar": "^3.0.5",
